# claude

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  claude.cabal  flake.nix
examples/: README.md
examples/claude-example/: Main.hs
examples/claude-programmatic-tool-calling-example/: Main.hs
examples/claude-stream-example/: Main.hs
examples/claude-structured-outputs-example/: Main.hs
examples/claude-tool-example/: Main.hs
examples/claude-tool-search-example/: Main.hs
examples/claude-vision-example/: Main.hs
src/Claude/: Prelude.hs  V1.hs
src/Claude/V1/: Error.hs  Messages.hs  Tool.hs
src/Claude/V1/Messages/: Batches.hs
tasty/: Main.hs
