cabal-version:      2.4
name:               claude
version:            0.1.0
synopsis:           Servant bindings to Anthropic's Claude API
description:        This package provides comprehensive and type-safe bindings
                    to Anthropic's Claude API, providing both a Servant interface
                    and non-Servant interface for convenience.
                    .
                    Read the @README@ below for a fully worked usage example.
                    .
                    Otherwise, browse the "Claude.V1" module, which is the
                    intended package entrypoint.
license:            BSD-3-Clause
license-file:       LICENSE
author:             Paul-Arthur Asselin
maintainer:         pa@mercury.com
category:           AI, API, LLM
copyright:          2025
build-type:         Simple
extra-doc-files:    README.md

source-repository head
  type:             git
  location:         https://github.com/MercuryTechnologies/claude

library
    default-language:   Haskell2010
    hs-source-dirs:     src
    build-depends:      base >=4.15.0.0 && < 5
                      , aeson
                      , bytestring
                      , containers
                      , filepath
                      , http-api-data
                      , http-client
                      , http-client-tls
                      , http-types
                      , servant
                      , servant-client
                      , text
                      , time
                      , vector
    exposed-modules:    Claude.V1
                        Claude.V1.Error
                        Claude.V1.Messages
                        Claude.V1.Messages.Batches
                        Claude.V1.Tool
    other-modules:      Claude.Prelude
    default-extensions: DataKinds
                      , DeriveAnyClass
                      , DeriveGeneric
                      , DerivingStrategies
                      , DuplicateRecordFields
                      , FlexibleInstances
                      , GeneralizedNewtypeDeriving
                      , OverloadedLists
                      , OverloadedStrings
                      , RecordWildCards
                      , MultiParamTypeClasses
                      , NamedFieldPuns
                      , TypeApplications
                      , TypeOperators
                      , ViewPatterns
    ghc-options:        -Wall -Wno-missing-fields

test-suite tasty
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   tasty
    main-is:          Main.hs
    build-depends:    base
                    , aeson
                    , claude
                    , http-client
                    , http-client-tls
                    , servant-client
                    , tasty
                    , tasty-hunit
                    , text
    default-extensions: DuplicateRecordFields
                      , NamedFieldPuns
                      , OverloadedLists
                      , OverloadedStrings
                      , RecordWildCards
    ghc-options:      -Wall

executable claude-example
    default-language: Haskell2010
    hs-source-dirs:   examples/claude-example
    main-is:          Main.hs
    build-depends:    base
                    , claude
                    , text
    default-extensions: DuplicateRecordFields
                      , NamedFieldPuns
                      , OverloadedLists
                      , OverloadedStrings
    ghc-options:      -Wall

executable claude-stream-example
    default-language: Haskell2010
    hs-source-dirs:   examples/claude-stream-example
    main-is:          Main.hs
    build-depends:    base
                    , aeson
                    , claude
                    , text
    default-extensions: DuplicateRecordFields
                      , NamedFieldPuns
                      , OverloadedLists
                      , OverloadedStrings
    ghc-options:      -Wall

executable claude-tool-example
    default-language: Haskell2010
    hs-source-dirs:   examples/claude-tool-example
    main-is:          Main.hs
    build-depends:    base
                    , aeson
                    , bytestring
                    , claude
                    , text
                    , vector
    default-extensions: DuplicateRecordFields
                      , NamedFieldPuns
                      , OverloadedLists
                      , OverloadedStrings
    ghc-options:      -Wall

executable claude-vision-example
    default-language: Haskell2010
    hs-source-dirs:   examples/claude-vision-example
    main-is:          Main.hs
    build-depends:    base
                    , base64-bytestring
                    , bytestring
                    , claude
                    , text
    default-extensions: DuplicateRecordFields
                      , NamedFieldPuns
                      , OverloadedLists
                      , OverloadedStrings
    ghc-options:      -Wall

executable claude-tool-search-example
    default-language: Haskell2010
    hs-source-dirs:   examples/claude-tool-search-example
    main-is:          Main.hs
    build-depends:    base
                    , aeson
                    , claude
                    , text
    default-extensions: DuplicateRecordFields
                      , NamedFieldPuns
                      , OverloadedLists
                      , OverloadedStrings
    ghc-options:      -Wall
